--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 title                    : "Ege's Personal Website"
 title_separator          : "-"
 name                     : &name "Egecan Cogulu"
-description              : &description "Personal / Professional Website"
+description              : &description "Personal Website"
 url                      : https://egecancogulu.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "EgecanCogulu/egecancogulu.github.io"
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Egecan Cogulu"
   pronouns         : # example: "she/her"  
-  bio              : "Data Scientist"
+  bio              : "Data Scientist | Ph.D. in Physics"
   location         : "SF Bay Area"
   employer         : "Happy Returns"
   uri              : # URL
