--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Data Scientist | Ph.D. in Physics"
   location         : "SF Bay Area"
-  employer         : "Happy Returns"
+  employer         : # "Happy Returns"
   uri              : # URL
   email            : "egecancogulu@gmail.com" 
 
@@ -34,7 +34,7 @@ author:
   arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : "https://scholar.google.com/citations?user=YzKgnmAAAAAJ&hl=en"
   impactstory      : # URL
-  orcid            : "https://orcid.org/0000-0001-5568-3476"
+  orcid            : #"https://orcid.org/0000-0001-5568-3476"
 
   researchgate     : # URL
 
@@ -87,7 +87,7 @@ breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
 future                   : true
 read_more                : "disabled" # if enabled, adds "Read more" links to excerpts
-talkmap_link             : false #change to true to add link to talkmap on talks page
+talkmap_link             : true #change to true to add link to talkmap on talks page
 comments:
   provider               : # false (default), "disqus", "discourse", "facebook", "google-plus", "staticman", "custom"
   disqus:
