--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,7 @@ main:
   - title: "Posts"
     url: /year-archive/
 
-
-  - title: "Publications"
+  - title: "Acedemic Publications"
     url: /publications/
 
   # - title: "Talks"
@@ -19,11 +18,11 @@ main:
   # - title: "Teaching"
   #   url: /teaching/    
     
-  # - title: "Portfolio"
-  #   url: /portfolio/
+  - title: "Portfolio"
+    url: /portfolio/
         
   - title: "Resume / CV"
     url: /cv/
     
-  # - title: "Guide"
-  #   url: /markdown/
+ - title: "Conctact"
+    url: /markdown/
