--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,7 @@ main:
   - title: "Posts"
     url: /year-archive/
 
-  - title: "Acedemic Publications"
+  - title: "Publications"
     url: /publications/
 
   # - title: "Talks"
@@ -24,5 +24,5 @@ main:
   - title: "Resume / CV"
     url: /cv/
     
- - title: "Conctact"
-    url: /markdown/
+#  - title: "Conctact"
+#     url: /markdown/
