added publication pdfs

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   name             : "Ege(can) Cogulu"
   pronouns         : # example: "she/her"  
   bio              : "Data Scientist | Ph.D. in Physics"
-  location         : "SF Bay Area"
+  location         : "San Francisco Bay Area"
   employer         : # "Happy Returns"
   uri              : # URL
   email            : "egecancogulu@gmail.com" 
