--- a/_config.yml
+++ b/_config.yml
@@ -215,7 +215,7 @@ collections:
   #   permalink: /:collection/:path/
   publications:
     output: true
-    permalink: /publications/:title/
+    permalink: /:collection/:path/
   portfolio:
     output: true
     permalink: /:collection/:path/
