--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   name             : "Ege(can) Cogulu"
   pronouns         : # example: "she/her"  
   bio              : "Data Scientist | Ph.D. in Physics"
-  location         : "San Francisco"
+  location         : "San Francisco Bay"
   employer         : # "Happy Returns"
   uri              : # URL
   email            : "egecancogulu@gmail.com" 
@@ -74,12 +74,13 @@ author:
 
 # Publication Category - The following the list of publication categories and their headings
 publication_category:
-  books:
-    title: 'Books'
-  manuscripts:
-    title: 'Journal Articles'    
   thesis:
     title: 'PhD Thesis'
+  firstauthor:
+    title: 'First Author Papers'  
+  manuscripts:
+    title: 'Other Papers'
+
 
 # Site Settings
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
