modified all publications

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "EgecanCogulu/egecancogulu.github.io"
 author:
   # Biographic information
   avatar           : "profile_pic.jpg"
-  name             : "Ege(can) Cogulu"
+  name             : "Ege Cogulu"
   pronouns         : # example: "she/her"  
   bio              : "Data Scientist | Ph.D. in Physics"
   location         : "San Francisco Bay"
